# CSCEnvironmentHelpers

DriveSetup/: Roihu SSH and Storage Setup.md
MLEnvironment/: README.md
PythonEnvironment/: SmartSimEnvironmentSetup.md
PythonEnvironment/MachineLearning/: README.md
SmartSimEnvironment/: README.md
python-environment/: machine-learning-environment.md
ssh-connection/: ssh-certificate-setup.md  ssh-key-generation.md  transfer-file.md
utilities/eqx4smartredis/: eqx_io.py  pyproject.toml
utilities/eqx4smartredis/eqx_io.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
